[package]
name = "as-guard"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/mintwm/utils"
authors = ["selrisu <myirisuchan@gmail.com>"]
description = ""

[lints]
workspace = true

[features]
default = ["debug"]
debug = []
release = []

[dependencies]
cfg-if = "1.0.4"
