[package]
name = "idmint"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/mintwm/utils"
authors = ["selrisu <myirisuchan@gmail.com>"]
description = "A tiny library for minting unique u8 identifiers."

[lints]
workspace = true

[features]
partial_ord = []
partial_eq = []
hash = []

[dependencies.num-traits]
version = "0.2.19"
default-features = false

[dependencies]
as-guard.workspace = true

[[test]]
name = "recycle_recycled_last"
path = "tests/stack.rs"
required-features = ["partial_eq"]
